// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuditFindingList theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    class="rh-audit-finding-list"
    data-source="audit"
  >
    <ul
      aria-label="Scientific audit"
      class="rh-audit-finding-list__rows"
    >
      <li
        class="rh-audit-finding"
        data-kind="unsupported_statement"
        data-severity="error"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Must fix
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Unsupported statement
          </span>
          <span
            class="rh-audit-finding__message"
          >
            No accepted Evidence supports "the effect doubles under load".
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 88
          </span>
        </button>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="wording_stronger_than_claim"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Wording stronger than the claim
          </span>
          <span
            class="rh-audit-finding__message"
          >
            "proves" overstates C0041, which is qualified to one dataset.
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 91
          </span>
        </button>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark rh-icon"
              data-icon="bookmark"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            C0041
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="invalid_anchor"
        data-severity="info"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Note
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-link2-off lucide-link-2-off rh-icon"
            data-icon="link-2-off"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7A5 5 0 0 1 7 7"
            />
            <path
              d="M15 7h2a5 5 0 0 1 4 8"
            />
            <line
              x1="8"
              x2="12"
              y1="12"
              y2="12"
            />
            <line
              x1="2"
              x2="22"
              y1="2"
              y2="22"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Invalid source anchor
          </span>
          <span
            class="rh-audit-finding__message"
          >
            The anchor for E0482 no longer resolves in A0017-3.
          </span>
        </span>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-link rh-icon"
              data-icon="link"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
              />
              <path
                d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
              />
            </svg>
            AN0012
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="novel_rule_from_the_daemon"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-microscope rh-icon"
            data-icon="microscope"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18h8"
            />
            <path
              d="M3 22h18"
            />
            <path
              d="M14 22a7 7 0 1 0 0-14h-1"
            />
            <path
              d="M9 14h2"
            />
            <path
              d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
            />
            <path
              d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Novel rule from the daemon
          </span>
          <span
            class="rh-audit-finding__message"
          >
            An audit kind this package has never heard of still renders.
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AuditFindingList theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    class="rh-audit-finding-list"
    data-source="audit"
  >
    <ul
      aria-label="Scientific audit"
      class="rh-audit-finding-list__rows"
    >
      <li
        class="rh-audit-finding"
        data-kind="unsupported_statement"
        data-severity="error"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Must fix
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Unsupported statement
          </span>
          <span
            class="rh-audit-finding__message"
          >
            No accepted Evidence supports "the effect doubles under load".
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 88
          </span>
        </button>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="wording_stronger_than_claim"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Wording stronger than the claim
          </span>
          <span
            class="rh-audit-finding__message"
          >
            "proves" overstates C0041, which is qualified to one dataset.
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 91
          </span>
        </button>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark rh-icon"
              data-icon="bookmark"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            C0041
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="invalid_anchor"
        data-severity="info"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Note
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-link2-off lucide-link-2-off rh-icon"
            data-icon="link-2-off"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7A5 5 0 0 1 7 7"
            />
            <path
              d="M15 7h2a5 5 0 0 1 4 8"
            />
            <line
              x1="8"
              x2="12"
              y1="12"
              y2="12"
            />
            <line
              x1="2"
              x2="22"
              y1="2"
              y2="22"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Invalid source anchor
          </span>
          <span
            class="rh-audit-finding__message"
          >
            The anchor for E0482 no longer resolves in A0017-3.
          </span>
        </span>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-link rh-icon"
              data-icon="link"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
              />
              <path
                d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
              />
            </svg>
            AN0012
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="novel_rule_from_the_daemon"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-microscope rh-icon"
            data-icon="microscope"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18h8"
            />
            <path
              d="M3 22h18"
            />
            <path
              d="M14 22a7 7 0 1 0 0-14h-1"
            />
            <path
              d="M9 14h2"
            />
            <path
              d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
            />
            <path
              d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Novel rule from the daemon
          </span>
          <span
            class="rh-audit-finding__message"
          >
            An audit kind this package has never heard of still renders.
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AuditFindingList theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    class="rh-audit-finding-list"
    data-source="audit"
  >
    <ul
      aria-label="Scientific audit"
      class="rh-audit-finding-list__rows"
    >
      <li
        class="rh-audit-finding"
        data-kind="unsupported_statement"
        data-severity="error"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Must fix
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Unsupported statement
          </span>
          <span
            class="rh-audit-finding__message"
          >
            No accepted Evidence supports "the effect doubles under load".
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 88
          </span>
        </button>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="wording_stronger_than_claim"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Wording stronger than the claim
          </span>
          <span
            class="rh-audit-finding__message"
          >
            "proves" overstates C0041, which is qualified to one dataset.
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 91
          </span>
        </button>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark rh-icon"
              data-icon="bookmark"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            C0041
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="invalid_anchor"
        data-severity="info"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Note
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-link2-off lucide-link-2-off rh-icon"
            data-icon="link-2-off"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7A5 5 0 0 1 7 7"
            />
            <path
              d="M15 7h2a5 5 0 0 1 4 8"
            />
            <line
              x1="8"
              x2="12"
              y1="12"
              y2="12"
            />
            <line
              x1="2"
              x2="22"
              y1="2"
              y2="22"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Invalid source anchor
          </span>
          <span
            class="rh-audit-finding__message"
          >
            The anchor for E0482 no longer resolves in A0017-3.
          </span>
        </span>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-link rh-icon"
              data-icon="link"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
              />
              <path
                d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
              />
            </svg>
            AN0012
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="novel_rule_from_the_daemon"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-microscope rh-icon"
            data-icon="microscope"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18h8"
            />
            <path
              d="M3 22h18"
            />
            <path
              d="M14 22a7 7 0 1 0 0-14h-1"
            />
            <path
              d="M9 14h2"
            />
            <path
              d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
            />
            <path
              d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Novel rule from the daemon
          </span>
          <span
            class="rh-audit-finding__message"
          >
            An audit kind this package has never heard of still renders.
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AuditFindingList theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    class="rh-audit-finding-list"
    data-source="audit"
  >
    <ul
      aria-label="Scientific audit"
      class="rh-audit-finding-list__rows"
    >
      <li
        class="rh-audit-finding"
        data-kind="unsupported_statement"
        data-severity="error"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Must fix
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-dashed rh-icon"
            data-icon="circle-dashed"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.1 2.182a10 10 0 0 1 3.8 0"
            />
            <path
              d="M13.9 21.818a10 10 0 0 1-3.8 0"
            />
            <path
              d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
            />
            <path
              d="M2.182 13.9a10 10 0 0 1 0-3.8"
            />
            <path
              d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
            />
            <path
              d="M21.818 10.1a10 10 0 0 1 0 3.8"
            />
            <path
              d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
            />
            <path
              d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Unsupported statement
          </span>
          <span
            class="rh-audit-finding__message"
          >
            No accepted Evidence supports "the effect doubles under load".
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 88
          </span>
        </button>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="wording_stronger_than_claim"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <button
          class="rh-audit-finding__button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-scale rh-icon"
            data-icon="scale"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3v18"
            />
            <path
              d="m19 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
            />
            <path
              d="m5 8 3 8a5 5 0 0 1-6 0zV7"
            />
            <path
              d="M7 21h10"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Wording stronger than the claim
          </span>
          <span
            class="rh-audit-finding__message"
          >
            "proves" overstates C0041, which is qualified to one dataset.
          </span>
          <span
            class="rh-audit-finding__position"
          >
            manuscript/main.tex, line 91
          </span>
        </button>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-bookmark rh-icon"
              data-icon="bookmark"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
              />
            </svg>
            C0041
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="invalid_anchor"
        data-severity="info"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Note
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-link2-off lucide-link-2-off rh-icon"
            data-icon="link-2-off"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7A5 5 0 0 1 7 7"
            />
            <path
              d="M15 7h2a5 5 0 0 1 4 8"
            />
            <line
              x1="8"
              x2="12"
              y1="12"
              y2="12"
            />
            <line
              x1="2"
              x2="22"
              y1="2"
              y2="22"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Invalid source anchor
          </span>
          <span
            class="rh-audit-finding__message"
          >
            The anchor for E0482 no longer resolves in A0017-3.
          </span>
        </span>
        <span
          class="rh-audit-finding__refs"
        >
          <button
            class="rh-audit-finding__ref"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-link rh-icon"
              data-icon="link"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
              />
              <path
                d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
              />
            </svg>
            AN0012
          </button>
        </span>
      </li>
      <li
        class="rh-audit-finding"
        data-kind="novel_rule_from_the_daemon"
        data-severity="warning"
        data-source="audit"
      >
        <span
          class="rh-audit-finding__severity"
        >
          Review
        </span>
        <span
          class="rh-audit-finding__button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-microscope rh-icon"
            data-icon="microscope"
            fill="none"
            focusable="false"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18h8"
            />
            <path
              d="M3 22h18"
            />
            <path
              d="M14 22a7 7 0 1 0 0-14h-1"
            />
            <path
              d="M9 14h2"
            />
            <path
              d="M9 12a2 2 0 0 1-2-2V6h6v4a2 2 0 0 1-2 2Z"
            />
            <path
              d="M12 6V3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3"
            />
          </svg>
          <span
            class="rh-audit-finding__kind"
          >
            Novel rule from the daemon
          </span>
          <span
            class="rh-audit-finding__message"
          >
            An audit kind this package has never heard of still renders.
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
